make-a-wish-salesforce/src/objects/VisualAntidote__FastFormsAuth__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Information regarding instance and force.com site URL</description>
    <fields>
        <fullName>VisualAntidote__Environment__c</fullName>
        <label>Environment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Instance_Url__c</fullName>
        <label>Instance Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__ReCaptcha_Secret_Key__c</fullName>
        <label>ReCaptcha Secret Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__ReCaptcha_Site_Key__c</fullName>
        <label>ReCaptcha Site Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Site_Url__c</fullName>
        <label>Site Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Use_Custom_Domain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Custom Domain</label>
        <type>Checkbox</type>
    </fields>
    <label>Formstack Auth</label>
</CustomObject>